# applied-ai-lab

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: eval-engineer.md  ml-incident-responder.md  ml-staff-reviewer.md  model-serving-architect.md
.claude/commands/: build.md  eval.md  skills-help.md  spec.md
.claude/hooks/: README.md  baseline-guard.sh  pre-commit-eval-reminder.sh  spec-before-code.sh
.claude/skills/debugging-ml-failures/: SKILL.md
.claude/skills/eval-driven-development/: SKILL.md
.claude/skills/observability-for-ml-systems/: SKILL.md
.cursor/: hooks.json
.cursor/commands/: adr.md  design.md  incident.md  plan.md  review.md  ship.md
.cursor/rules/: karpathy-4-principles.mdc  ml-honesty-discipline.mdc  ml-production-mindset.mdc
.cursor/skills/: README.md
.cursor/skills/code-review-ml/: SKILL.md
.cursor/skills/documentation-and-adrs-ml/: SKILL.md
.cursor/skills/drift-and-sliced-eval/: SKILL.md
.cursor/skills/incremental-implementation/: SKILL.md
.cursor/skills/mcp-tool-server-build/: SKILL.md
.cursor/skills/ml-incident-response/: SKILL.md
.github/workflows/: eval-gate.yml
docs/: install-to-other-repo.md  skill-anatomy.md
docs/adrs/: 0001-adopt-karpathy-and-agent-skills-anatomy.md
eval/: README.md  __init__.py  baseline.json  golden.py  metrics.py  runner.py
eval/golden/: README.md  sample_golden.jsonl
modules/streaming-fraud-mini/: README.md  spec.md
tests/: __init__.py  test_eval_regression.py  test_eval_smoke.py
(+11 files in other folders)
