[project]
name = "applied-ai-lab"
version = "0.1.0"
description = "AI Systems Lab — personal production-grade playground for agentic AI, eval harness, observability, memory, MCP."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Minh Tien Pham" }]
requires-python = ">=3.10"
dependencies = [
    # L6 Eval Harness — DeepEval is the chosen CI framework
    "deepeval>=2.0.0",
    # L1 Model Gateway (future) — LiteLLM unified API
    "litellm>=1.40.0",
    # L3 Knowledge (future) — Qdrant client
    "qdrant-client>=1.10.0",
    # Common
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eval*", "gateway*", "runtime*", "knowledge*", "memory*", "tools*", "obs*", "deploy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "smoke: minimal smoke tests (no LLM call, fast)",
    "eval: DeepEval regression tests (requires LLM judge, slow)",
    "integration: integration tests (requires services)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
